--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <!-- Add a text input with the id and name attributes set to 'phone' -->
       
-      <input id="tel" type="tel" name="phone" placeholder="Enter Telephone (optional)">
+      <input id="phone" type="tel" name="phone" placeholder="Enter Telephone (optional)">
       <!-- Include the place holder text "Enter Telephone (optional)" -->
 
      
